# hkex-filing-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/hkex_scraper/: __init__.py  api.py  config.py  db.py  extractor.py  graph.py  main.py  pipeline.py  utils.py
tests/: test_utils.py
